# ba_name

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/advert/: adv_stat.ipynb  main.py  utils_advert.py
src/advert_spend/: advert_spend.ipynb  main.py  utils_adv_spend.py
src/content/: content.py  utils_content.py
src/funnel/: main.py  test.ipynb  utils_funnel.py
